fix spinner overflow with padding

--- a/packages/core/src/components/spinner/_spinner.scss
+++ b/packages/core/src/components/spinner/_spinner.scss
@@ -21,6 +21,9 @@
 
   svg {
     display: block;
+    // reduce effective image size a little bit to keep overflowing circle edges
+    // visible and inside the bounds of the Spinner element (no outer overflow).
+    padding: 1px;
   }
 
   path {
